Error Handling: MessageBeep function

--- a/src/THNETII.WinApi.Native.ErrorHandling/THNETII.WinApi.Native.ErrorHandling.csproj
+++ b/src/THNETII.WinApi.Native.ErrorHandling/THNETII.WinApi.Native.ErrorHandling.csproj
@@ -50,6 +50,7 @@
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="bin\**;obj\**" />
