DbgHelp: FPO_DATA structure

--- a/src/THNETII.WinApi.Native.DbgHelp/project.json
+++ b/src/THNETII.WinApi.Native.DbgHelp/project.json
@@ -9,6 +9,8 @@
   },
 
   "dependencies": {
+    "THNETII.InteropServices.Bitfields": { "target": "project" },
+
     "NETStandard.Library": "1.6.1-*"
   },
 
