DbhHelp: IMAGE_DEBUG_INFORMATION structure (Stage 1)

--- a/src/THNETII.WinApi.Native.DbgHelp/project.json
+++ b/src/THNETII.WinApi.Native.DbgHelp/project.json
@@ -10,6 +10,7 @@
 
   "dependencies": {
     "THNETII.InteropServices.Bitfields": { "target": "project" },
+    "THNETII.InteropServices.NativeMemory": { "target": "project" },
 
     "NETStandard.Library": "1.6.1-*"
   },
