DbgHelp: IMAGE_DEBUG_INFORMATION structure (complete)

--- a/src/THNETII.WinApi.Native.DbgHelp/project.json
+++ b/src/THNETII.WinApi.Native.DbgHelp/project.json
@@ -12,6 +12,8 @@
     "THNETII.InteropServices.Bitfields": { "target": "project" },
     "THNETII.InteropServices.NativeMemory": { "target": "project" },
 
+    "THNETII.WinApi.Native.ImageHelp": { "target": "project" },
+
     "NETStandard.Library": "1.6.1-*"
   },
 
