--- a/src/THNETII.WinApi.Native.DbgHelp/project.json
+++ b/src/THNETII.WinApi.Native.DbgHelp/project.json
@@ -12,7 +12,8 @@
     "THNETII.InteropServices.Bitfields": { "target": "project" },
     "THNETII.InteropServices.NativeMemory": { "target": "project" },
 
-    "NETStandard.Library": "1.6.1-*"
+    "NETStandard.Library": "1.6.1-*",
+    "System.IO.MemoryMappedFiles": "4.0.0-*"
   },
 
   "frameworks": {
