ImageHlp: TouchFileTimes and UpdateDebugInfoFileEx functions

--- a/src/THNETII.WinApi.Native.DbgHelp/project.json
+++ b/src/THNETII.WinApi.Native.DbgHelp/project.json
@@ -12,6 +12,11 @@
     "THNETII.InteropServices.Bitfields": { "target": "project" },
     "THNETII.InteropServices.NativeMemory": { "target": "project" },
 
+    "THNETII.WinApi.Native.ErrorHandling": {
+      "type": "build",
+      "target": "project"
+    },
+
     "NETStandard.Library": "1.6.1-*",
     "System.IO.MemoryMappedFiles": "4.0.0-*"
   },
