Added MS-ERRREF project from the Windows Protocols Reference

--- a/src/THNETII.WinApi.Native.DbgHelp/project.json
+++ b/src/THNETII.WinApi.Native.DbgHelp/project.json
@@ -17,6 +17,11 @@
       "target": "project"
     },
 
+    "THNETII.WindowsProtocols.MsErrRef": {
+      "type": "build",
+      "target": "project"
+    },
+
     "NETStandard.Library": "1.6.1-*",
     "System.IO.MemoryMappedFiles": "4.0.0-*"
   },
