MS-DTYP: SYSTEMTIME

--- a/src/THNETII.WinApi.Native.DbgHelp/project.json
+++ b/src/THNETII.WinApi.Native.DbgHelp/project.json
@@ -12,10 +12,7 @@
     "THNETII.InteropServices.Bitfields": { "target": "project" },
     "THNETII.InteropServices.NativeMemory": { "target": "project" },
 
-    "THNETII.WinApi.Native.ErrorHandling": {
-      "type": "build",
-      "target": "project"
-    },
+    "THNETII.WindowsProtocols.MsDTyp": { "target": "project" },
 
     "THNETII.WindowsProtocols.MsErrRef": {
       "type": "build",
