Added WinApi Native Test project

--- a/src/THNETII.WinApi.Native.DbgHelp/project.json
+++ b/src/THNETII.WinApi.Native.DbgHelp/project.json
@@ -13,11 +13,7 @@
     "THNETII.InteropServices.NativeMemory": { "target": "project" },
 
     "THNETII.WindowsProtocols.MsDTyp": { "target": "project" },
-
-    "THNETII.WindowsProtocols.MsErrRef": {
-      "type": "build",
-      "target": "project"
-    },
+    "THNETII.WindowsProtocols.MsErrRef": { "target": "project" },
 
     "NETStandard.Library": "1.6.1-*",
     "System.IO.MemoryMappedFiles": "4.0.0-*"
