--- a/src/THNETII.WinApi.Native.ApplicationRecoveryRestart/project.json
+++ b/src/THNETII.WinApi.Native.ApplicationRecoveryRestart/project.json
@@ -1,4 +1,5 @@
 ﻿{
+  "version": "0.0.1-msdnlibrary-cc948909",
   "authors": [ "Fredrik Høisæther Rasch" ],
 
   "tooling": { "defaultNamespace": "Microsoft.Win32.WinApi.Diagnostics.ApplicationRecovertRestart" },
@@ -8,6 +9,8 @@
   },
 
   "dependencies": {
+    "THNETII.WindowsProtocols.MsErrRef": { "target": "project" },
+
     "NETStandard.Library": "1.6.1-*"
   },
 
