Corrected project.json inconsistencies

--- a/src/THNETII.WinApi.Native.DbgHelp/project.json
+++ b/src/THNETII.WinApi.Native.DbgHelp/project.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.1-msdnlibrary-ms679309",
-  "authors": [ "Fredrik Høisæther Rasch" ],
+  "authors": [ "Fredrik HÃ¸isÃ¦ther Rasch" ],
 
   "tooling": { "defaultNamespace": "Microsoft.Win32.WinApi.Diagnostics.DbgHelp" },
 
@@ -29,7 +29,7 @@
   "packOptions": {
     "repository": {
       "type": "git",
-      "url": "https://github.com/couven92/thnetii-windows-api"
+      "url": "https://github.com/couven92/thnetii-windows-api.git"
     }
   }
 }
