--- a/src/THNETII.WinApi.Native.NetworkManagement/THNETII.WinApi.Native.NetworkManagement.csproj
+++ b/src/THNETII.WinApi.Native.NetworkManagement/THNETII.WinApi.Native.NetworkManagement.csproj
@@ -19,6 +19,9 @@
   <ItemGroup>
     <PackageReference Include="NETStandard.Library" Version="1.6.1-*" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Native.ErrorHandling\THNETII.WinApi.Native.ErrorHandling.csproj" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.2' ">
     <DebugType>portable</DebugType>
   </PropertyGroup>
