--- a/src/THNETII.WinApi.Native.DbgHelp/THNETII.WinApi.Native.DbgHelp.csproj
+++ b/src/THNETII.WinApi.Native.DbgHelp/THNETII.WinApi.Native.DbgHelp.csproj
@@ -8,6 +8,8 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/couven92/thnetii-windows-api.git</RepositoryUrl>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">$(PackageTargetFallback);dotnet5.4;portable-net452+win81</PackageTargetFallback>
+    <BaseIntermediateOutputPath>$(SolutionDir)obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
+    <OutputPath>$(SolutionDir)bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" />
@@ -21,12 +23,8 @@
     <ProjectReference Include="..\THNETII.WindowsProtocols.MsErrRef\THNETII.WindowsProtocols.MsErrRef.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="NETStandard.Library">
-      <Version>1.6.1-*</Version>
-    </PackageReference>
-    <PackageReference Include="System.IO.MemoryMappedFiles">
-      <Version>4.0.0-*</Version>
-    </PackageReference>
+    <PackageReference Include="NETStandard.Library" Version="1.6.1-*" />
+    <PackageReference Include="System.IO.MemoryMappedFiles" Version="4.0.0-*" />
   </ItemGroup>
   <PropertyGroup Label="Configuration">
     <RootNamespace>Microsoft.Win32.WinApi.Diagnostics.DbgHelp</RootNamespace>
