project.json fixups

--- a/src/THNETII.WinApi.Native.ApplicationRecoveryRestart/project.json
+++ b/src/THNETII.WinApi.Native.ApplicationRecoveryRestart/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "0.0.1-msdnlibrary-cc948909",
+  "version": "10.0.14393-msdnlibrary-cc948909",
   "authors": [ "Fredrik Høisæther Rasch" ],
 
   "tooling": { "defaultNamespace": "Microsoft.Win32.WinApi.Diagnostics.ApplicationRecovertRestart" },
@@ -11,7 +11,7 @@
   "dependencies": {
     "THNETII.WindowsProtocols.MsErrRef": { "target": "project" },
 
-    "NETStandard.Library": "1.6.1-*"
+    "NETStandard.Library": "1.6.1"
   },
 
   "frameworks": {
