--- a/src/THNETII.WinApi.Native.Authorization/project.json
+++ b/src/THNETII.WinApi.Native.Authorization/project.json
@@ -9,9 +9,11 @@
   },
 
   "dependencies": {
-    "THNETII.InteropServices.NativeMemory": { "target": "project"},
-    "THNETII.InteropServices.SafeHandles": { "target": "project"},
+    "THNETII.InteropServices.NativeMemory": { "target": "project" },
+    "THNETII.InteropServices.SafeHandles": { "target": "project" },
     "THNETII.WindowsProtocols.MsErrRef": { "target": "project" },
+
+    "THNETII.WinApi.Native.SecurityManagement": { "target": "project" },
 
     "NETStandard.Library": "1.6.1",
     "System.Security.AccessControl": "4.3.0"
