Added Compile remove item group entries for bin and obj folders

--- a/src/THNETII.WinApi.Native.MemoryManagement/THNETII.WinApi.Native.MemoryManagement.csproj
+++ b/src/THNETII.WinApi.Native.MemoryManagement/THNETII.WinApi.Native.MemoryManagement.csproj
@@ -17,6 +17,8 @@
   <Import Project="..\..\version.props" />
 
   <ItemGroup>
+    <Compile Remove="obj\**\*.cs" />
+    <Compile Remove="bin\**\*.cs" />
     <None Remove="obj\**\*.*" />
     <None Remove="bin\**\*.*" />
   </ItemGroup>
