--- a/src/THNETII.WinApi.Native.ApplicationRecoveryRestart/THNETII.WinApi.Native.ApplicationRecoveryRestart.csproj
+++ b/src/THNETII.WinApi.Native.ApplicationRecoveryRestart/THNETII.WinApi.Native.ApplicationRecoveryRestart.csproj
@@ -18,6 +18,8 @@
   <Import Project="..\..\version.props" />
   
   <ItemGroup>
+    <Compile Remove="obj\**\*.cs" />
+    <Compile Remove="bin\**\*.cs" />
     <None Remove="obj\**\*.*" />
     <None Remove="bin\**\*.*" />
   </ItemGroup>
