--- a/src/THNETII.WinApi.Native.Authorization/THNETII.WinApi.Native.Authorization.csproj
+++ b/src/THNETII.WinApi.Native.Authorization/THNETII.WinApi.Native.Authorization.csproj
@@ -28,6 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="obj\**\*.cs" />
+    <Compile Remove="bin\**\*.cs" />
     <None Remove="obj\**\*.*" />
     <None Remove="bin\**\*.*" />
   </ItemGroup>
