--- a/src/THNETII.WinApi.Native.DbgHelp/THNETII.WinApi.Native.DbgHelp.csproj
+++ b/src/THNETII.WinApi.Native.DbgHelp/THNETII.WinApi.Native.DbgHelp.csproj
@@ -27,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="obj\**\*.cs" />
+    <Compile Remove="bin\**\*.cs" />
     <None Remove="obj\**\*.*" />
     <None Remove="bin\**\*.*" />
   </ItemGroup>
