Moved MsErrRef to WinError project

--- a/src/THNETII.WinApi.Native.Authorization/THNETII.WinApi.Native.Authorization.csproj
+++ b/src/THNETII.WinApi.Native.Authorization/THNETII.WinApi.Native.Authorization.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\..\thnetii-interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
     <ProjectReference Include="..\..\thnetii-interopservices\src\THNETII.InteropServices.SafeHandles\THNETII.InteropServices.SafeHandles.csproj" />
     <ProjectReference Include="..\THNETII.WinApi.Native.SecurityManagement\THNETII.WinApi.Native.SecurityManagement.csproj" />
+    <ProjectReference Include="..\THNETII.WinApi.Native.WinError\THNETII.WinApi.Native.WinError.csproj" />
   </ItemGroup>
 
   <ItemGroup>
