--- a/src/THNETII.WinApi.Native.ApplicationRecoveryRestart/THNETII.WinApi.Native.ApplicationRecoveryRestart.csproj
+++ b/src/THNETII.WinApi.Native.ApplicationRecoveryRestart/THNETII.WinApi.Native.ApplicationRecoveryRestart.csproj
@@ -23,5 +23,9 @@
     <None Remove="obj\**\*.*" />
     <None Remove="bin\**\*.*" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Native.WinError\THNETII.WinApi.Native.WinError.csproj" />
+  </ItemGroup>
 
 </Project>
