--- a/src/THNETII.WinApi.Native.DbgHelp/THNETII.WinApi.Native.DbgHelp.csproj
+++ b/src/THNETII.WinApi.Native.DbgHelp/THNETII.WinApi.Native.DbgHelp.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\thnetii-interopservices\src\THNETII.InteropServices.Bitfields\THNETII.InteropServices.Bitfields.csproj" />
     <ProjectReference Include="..\..\thnetii-interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
+    <ProjectReference Include="..\THNETII.WinApi.Native.WinError\THNETII.WinApi.Native.WinError.csproj" />
   </ItemGroup>
 
   <ItemGroup>
