Global Memory Object implementation

--- a/src/THNETII.WinApi.Native.MemoryManagement/THNETII.WinApi.Native.MemoryManagement.csproj
+++ b/src/THNETII.WinApi.Native.MemoryManagement/THNETII.WinApi.Native.MemoryManagement.csproj
@@ -23,4 +23,8 @@
     <None Remove="bin\**\*.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Native.WinError\THNETII.WinApi.Native.WinError.csproj" />
+  </ItemGroup>
+
 </Project>
