Update gitmodules after repository transfer

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "thnetii-interopservices"]
-	path = thnetii-interopservices
-	url = https://github.com/couven92/thnetii-interopservices.git
+[submodule "interopservices"]
+	path = interopservices
+	branch = vs2017
+	url = https://github.com/thnetii/interopservices.git
