Namespace changes in Test project

--- a/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
+++ b/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
@@ -8,6 +8,8 @@
     <RuntimeFrameworkVersion>1.1.1</RuntimeFrameworkVersion>
     <DebugType>portable</DebugType>
 
+    <RootNamespace>THNETII.WinApi.Native</RootNamespace>
+
     <Description></Description>
   </PropertyGroup>
 
