--- a/src/THNETII.WinApi.Sample.Native/THNETII.WinApi.Sample.Native.vcxproj
+++ b/src/THNETII.WinApi.Sample.Native/THNETII.WinApi.Sample.Native.vcxproj
@@ -22,8 +22,8 @@
     <ProjectGuid>{5A24339F-7CF0-4E33-A823-15C7B96BC50A}</ProjectGuid>
     <RootNamespace>THNETII.WinApi.Native</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
-    <OutDir>$(SolutionDir)bin\$(Configuration)\$(Platform)\</OutDir>
-    <IntDir>$(SolutionDir)obj\$(MSBuildProjectName)\$(Configuration)\$(Platform)\</IntDir>
+    <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
+    <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup>
