Added THNETII.WinApi Web Testing project
Also amended namespaces in the web projects

--- a/src/THNETII.WinApi.NetworkManagement.Web/THNETII.WinApi.NetworkManagement.Web.csproj
+++ b/src/THNETII.WinApi.NetworkManagement.Web/THNETII.WinApi.NetworkManagement.Web.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <RootNamespace>THNETII.WinApi.Networking.NetworkManagement.Web</RootNamespace>
   </PropertyGroup>
 
   <Import Project="..\..\common.props" />
