--- a/src/THNETII.WinApi.NetworkManagement.WebModule/THNETII.WinApi.NetworkManagement.WebModule.csproj
+++ b/src/THNETII.WinApi.NetworkManagement.WebModule/THNETII.WinApi.NetworkManagement.WebModule.csproj
@@ -7,7 +7,7 @@
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
     <DebugType>portable</DebugType>
 
-    <RootNamespace>THNETII.WinApi.NetworkManagement.WebModule</RootNamespace>
+    <RootNamespace>THNETII.WinApi.Networking.NetworkManagement.WebModule</RootNamespace>
 
     <Description>
       TH-NETII Windows API Network Management Web Application Pluggable Module containing MVC Controllers and Views to represent and perform 
