--- a/src/THNETII.WinApi.Native.ActiveDirectoryDomainServices/THNETII.WinApi.Native.ActiveDirectoryDomainServices.csproj
+++ b/src/THNETII.WinApi.Native.ActiveDirectoryDomainServices/THNETII.WinApi.Native.ActiveDirectoryDomainServices.csproj
@@ -3,8 +3,13 @@
 
   <PropertyGroup>
     <LangVersion>7.2</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.1" />
+  </ItemGroup>
 
 </Project>
