--- a/src/THNETII.WinApi.Native.ActiveDirectoryServiceInterfaces.AdsHlp/THNETII.WinApi.Native.ActiveDirectoryServiceInterfaces.AdsHlp.csproj
+++ b/src/THNETII.WinApi.Native.ActiveDirectoryServiceInterfaces.AdsHlp/THNETII.WinApi.Native.ActiveDirectoryServiceInterfaces.AdsHlp.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
@@ -14,10 +14,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\THNETII.WinApi.Native.SecurityIdentity.Iads\THNETII.WinApi.Native.SecurityIdentity.Iads.csproj" />
   </ItemGroup>
 
 </Project>
