AMSI library with Unit tests

--- a/src/THNETII.WinApi.Sample.Native/THNETII.WinApi.Sample.Native.vcxproj
+++ b/src/THNETII.WinApi.Sample.Native/THNETII.WinApi.Sample.Native.vcxproj
@@ -64,6 +64,7 @@
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
+      <AdditionalDependencies>%(AdditionalDependencies);Amsi.lib</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
