--- a/test/THNETII.WinApi.Test/THNETII.WinApi.Test.csproj
+++ b/test/THNETII.WinApi.Test/THNETII.WinApi.Test.csproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>THNETII.WinApi.Native</RootNamespace>
+    <RootNamespace>THNETII.WinApi</RootNamespace>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -11,11 +11,10 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    <PackageReference Include="Xunit.SkippableFact" Version="1.3.6" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\THNETII.WinApi.Native.AntimalwareScanInterface\THNETII.WinApi.Native.AntimalwareScanInterface.csproj" />
+    <ProjectReference Include="..\..\src\THNETII.WinApi.AntimalwareScanInterface\THNETII.WinApi.AntimalwareScanInterface.csproj" />
   </ItemGroup>
 
 </Project>
