--- a/src-native-c/THNETII.WinApi.Sample.Native/THNETII.WinApi.Sample.Native.vcxproj
+++ b/src-native-c/THNETII.WinApi.Sample.Native/THNETII.WinApi.Sample.Native.vcxproj
@@ -64,7 +64,7 @@
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>%(AdditionalDependencies);Amsi.lib</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies);Amsi.lib;WSClient.lib</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
