Update and document Windows Error Code types

--- a/src/THNETII.WinApi.WindowsErrorCodes/THNETII.WinApi.WindowsErrorCodes.csproj
+++ b/src/THNETII.WinApi.WindowsErrorCodes/THNETII.WinApi.WindowsErrorCodes.csproj
@@ -9,9 +9,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Bitwise\THNETII.InteropServices.Bitwise.csproj" />
+    <ProjectReference Include="..\..\src-native\THNETII.WinApiNative.NTStatus\THNETII.WinApiNative.NTStatus.csproj" />
     <ProjectReference Include="..\..\src-native\THNETII.WinApiNative.WinError\THNETII.WinApiNative.WinError.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
+    <ProjectReference Include="..\..\src-native\THNETII.WinApiNative.WinNT\THNETII.WinApiNative.WinNT.csproj" />
   </ItemGroup>
 
 </Project>
