--- a/src-native/THNETII.WinApiNative.ErrorHandling/THNETII.WinApiNative.ErrorHandling.csproj
+++ b/src-native/THNETII.WinApiNative.ErrorHandling/THNETII.WinApiNative.ErrorHandling.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\THNETII.WinApiNative.WinNT\THNETII.WinApiNative.WinNT.csproj">
+    <ProjectReference Include="..\..\src\THNETII.WindowsProtocols.WindowsErrorCodes.Constants\THNETII.WindowsProtocols.WindowsErrorCodes.Constants.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
   </ItemGroup>
-
+  
 </Project>
